# rp2040-micromod-ICM-20948-imu

./: CMakeLists.txt
firmware/: .gitignore  CMakeLists.txt
firmware/lib/pico_ekf/: CMakeLists.txt  ITERATIVE.md  STANDARD.md  picoEKF.cpp  picoEKF.h
firmware/lib/pico_ekf/example/: CMakeLists.txt  ekf_example.cpp  iterative_ekf_example.cpp
firmware/lib/pico_ekf/src/: ExtendedKalmanFilter.h  picoEKF.cpp  picoEKF.h
firmware/lib/pico_icm20948/: CMakeLists.txt  README.md
firmware/lib/pico_icm20948/example/: icm20948_test.cpp
firmware/lib/pico_icm20948/src/: ICM_20948.cpp  ICM_20948.h
firmware/lib/pico_icm20948/src/util/: ICM_20948_C.c  ICM_20948_C.h  ICM_20948_ENUMERATIONS.h  ICM_20948_REGISTERS.h
firmware/src/: ekf_processor.cpp  ekf_processor.h  imu_collector.cpp  main.cpp
firmware/test/iterativeEKF/: ekf_processor.h  imu_collector.cpp  imu_collector.h  main.cpp
firmware/test/standardEKF/: main.cpp
lib/pico_ekf/: README.md
lib/pico_ekf/example/: ekf_example.cpp
lib/pico_ekf/src/: ExtendedKalmanFilter.h  IterativeEKF.cpp  IterativeEKF.h  StandardEKF.cpp  StandardEKF.h  picoEKFTypes.h
lib/pico_icm20948/: CMakeLists.txt  README.md
lib/pico_icm20948/example/: CMakeLists.txt
src/: ekf_processor.cpp  ekf_processor.h  imu_collector.h
test/standardEKF/: ekf_processor.cpp  ekf_processor.h
